force-app/main/default/objects/QuoteIssuer__mdt/QuoteIssuer__mdt.object-meta.xml
<CustomObject>
    <description
  >見積書に印字する自社(発行元)情報。組織ごとに設定できるようハードコードしない。</description>
    <label>見積発行元情報</label>
    <pluralLabel>見積発行元情報</pluralLabel>
</CustomObject>