force-app/main/default/objects/QuoteIssuer__mdt/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <label>振込先</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>