force-app/main/default/objects/QuoteIssuer__mdt/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>FAX番号</label>
    <length>40</length>
    <type>Text</type>
</CustomField>