force-app/main/default/objects/QuoteIssuer__mdt/fields/InvoiceRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceRegistrationNumber__c</fullName>
    <label>インボイス登録番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>