force-app/main/default/objects/QuoteIssuer__mdt/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>電話番号</label>
    <length>40</length>
    <type>Text</type>
</CustomField>